--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,41 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Winky+Sans:ital,wght@0,300..900;1,300..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Winky+Sans:ital,wght@0,300..900;1,300..900&display=swap');
+@import url('/css/footer.css');
+@import url('/css/header.css');
+
+/* Variables */
+:root{
+    --clr-bg: #f3dbbd;
+    --clr-primary: #100200;
+    --clr-secondary: #EEE7DC;
+    --clr-alert: #6E422F;
+
+}
+
 *{
-    background-color: black;
+    font-family: 'Poppins', sans-serif;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+body{
+    background-color: var(--clr-bg);
+}
+header{
+    width: 100%;
+    position: absolute;
+    top: 0;
+}
+footer{
+    width: 100%;
+    position: absolute;
+    bottom: 0;
+}
+/* Quitando decoraciones y asignando valores predeterminados */
+a{
+    text-decoration: none;
+    color: var(--clr-secondary);
+}
+li{
+    list-style: none;
 }
