--- a/components/header.html
+++ b/components/header.html
@@ -6,7 +6,7 @@
             <li class="link"><a href="#">Produtos</a></li>
             <li class="link"><a href="#">Catering</a></li>
             <li class="link"><a href="#">Nosotros</a></li>
-            <li class="link"><a href="#">Contacto</a></li>
+            <li class="link"><a href="#">Blog</a></li>
         </ul>
     </div>
 </nav>
