--- a/components/product.html
+++ b/components/product.html
@@ -1,3 +1,27 @@
-<div>
-    
+<div class="container product">
+    <!-- Title -->
+    <div>
+        <h1>Producto</h1>
+    </div>
+    <!-- img -->
+    <div>
+        <img src="" alt="">
+    </div>
+    <!-- Description -->
+    <div>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit perferendis, ex unde ut fugiat.</p>
+        <p>S/. 100</p>
+    </div>
+    <!-- Buttons -->
+    <div>
+        <div class="amount" id="amount">
+            <button>-</button>
+            <input type="text" value="1" id="">
+            <button>+</button>
+        </div>
+        <div class="options">
+            <button>Ver</button>
+            <button>Comprar</button>
+        </div>
+    </div>
 </div>
