--- a/css/main.css
+++ b/css/main.css
@@ -18,6 +18,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    color: var(--clr);
 }
 body{
     background-color: var(--clr-bg);
@@ -42,10 +43,21 @@ li{
 }
 main{
     display: flex;
+    flex-direction: column;
     justify-content: center;
-    align-items: start;
+    align-items: center;
     padding-top: 6rem;
+    color: var(--clr-alert);
 }
+/* Global container */
+.container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin: 1rem;
+}
+/* Slider */
 .slider{
     display: flex;
     justify-content: center;
@@ -89,13 +101,24 @@ main{
     right: 0;
     transform: rotate(180deg);
 }
-
+/* Ofertas */
 .ofertas {
-    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding-top: 2rem;
+    padding-bottom: 2rem;
+}
+.ofertas .titleLine{
+    width: 7rem;
+    height: 1px;
+    border-radius: 1px;
+    background-color: var(--clr-alert);
 }
 .clr-secondary{
     background-color: var(--clr-secondary);
 }
 .clr-alert{
-    background-color: var(--clr-alertr);
+    background-color: var(--clr-alert);
 }
