--- a/components/product.html
+++ b/components/product.html
@@ -14,14 +14,14 @@
     </div>
     <!-- Buttons -->
     <div>
-        <div class="amount" id="amount">
-            <button>-</button>
-            <input type="text" value="1" id="">
-            <button>+</button>
+        <div class="amount" id="1">
+            <button class="decrease">-</button>
+            <input type="number" value="1" id="amount" disabled>
+            <button class="add">+</button>
         </div>
         <div class="options">
-            <button>Ver</button>
-            <button>Comprar</button>
+            <button class="">Ver</button>
+            <button class="">Comprar</button>
         </div>
     </div>
 </div>
