--- a/components/product.html
+++ b/components/product.html
@@ -1,27 +1,20 @@
-<div class="container product">
+<div class="container product" id="0">
     <!-- Title -->
-    <div>
-        <h1>Producto</h1>
-    </div>
+    <h1>Producto</h1>
     <!-- img -->
-    <div>
-        <img src="" alt="">
-    </div>
-    <!-- Description -->
-    <div>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit perferendis, ex unde ut fugiat.</p>
-        <p>S/. 100</p>
-    </div>
+    <img src="" alt="">
+    <!-- Price -->
+    <p class="price">S/. 100</p>
     <!-- Buttons -->
     <div>
-        <div class="amount" id="1">
+        <div class="amount">
             <button class="decrease">-</button>
             <input type="number" value="1" id="amount" disabled>
             <button class="add">+</button>
         </div>
         <div class="options">
-            <button class="">Ver</button>
-            <button class="">Comprar</button>
+            <!-- <button class="">Detalles</button> -->
+            <button class="">Añadir al carrito</button>
         </div>
     </div>
 </div>
