--- a/components/header.html
+++ b/components/header.html
@@ -2,8 +2,8 @@
     <div class="nav-container">
         <img src="../img/logo.png" alt="Logo">
         <ul class="options">
-            <li class="link"><a href="#">Inicio</a></li>
-            <li class="link"><a href="#">Produtos</a></li>
+            <li class="link"><a href="/index.html">Inicio</a></li>
+            <li class="link"><a href="/pages/products.html">Produtos</a></li>
             <li class="link"><a href="#">Catering</a></li>
             <li class="link"><a href="#">Nosotros</a></li>
             <li class="link"><a href="#">Blog</a></li>
