--- a/css/header.css
+++ b/css/header.css
@@ -8,6 +8,7 @@
     display: flex;
     align-items: center;
     justify-content: space-around;
+    background-color: var(--clr-bg);
 }
 .nav-container img{
     width: 6rem;
@@ -22,7 +23,6 @@
     display: flex;
     flex-wrap: nowrap;
     gap: 2rem;
-
 }
 
 .link{
@@ -35,6 +35,7 @@
     padding-left: 1rem;
     padding-right: 1rem;
     border-radius: 10px;
+    transition: background-color 0.5s, color 0.1s;
 }
 
 .link a:hover{
