--- a/css/main.css
+++ b/css/main.css
@@ -25,7 +25,7 @@ body{
 }
 header{
     width: 100%;
-    position: absolute;
+    position: fixed;
     top: 0;
 }
 footer{
@@ -65,7 +65,7 @@ main{
     width: 100%;
 }
 .slider img{
-    height: 20rem;
+    height: 30rem;
     width: 100%;
     object-fit: cover;
     border: 0;
@@ -109,6 +109,12 @@ main{
     align-items: center;
     padding-top: 2rem;
     padding-bottom: 2rem;
+}
+.ofertas #ofertContainer {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
 }
 .ofertas .titleLine{
     width: 7rem;
