--- a/components/product.html
+++ b/components/product.html
@@ -1,4 +1,4 @@
-<div class="container product" id="0">
+<div class="container product fade-in" id="0">
     <!-- Title -->
     <h1>Producto</h1>
     <!-- img -->
