Add Category in productPage

--- a/css/product.css
+++ b/css/product.css
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    text-align: justify;
+    text-align: center;
     border: 2rem;
     padding: 1rem;
     border: solid;
