--- a/components/header.html
+++ b/components/header.html
@@ -6,7 +6,18 @@
             <li class="link"><a href="/pages/products.html">Produtos</a></li>
             <li class="link"><a href="#">Catering</a></li>
             <li class="link"><a href="#">Nosotros</a></li>
-            <li class="link"><a href="#">Blog</a></li>
+            <li class="link">
+                <img src="/img/carrito-compras.png" alt="" id="shoppingCart">
+                <p class="hiddenOption" id="shoppingQuantity">1</p>
+            </li>
         </ul>
     </div>
 </nav>
+<div class="shoppingModal hiddenOption" id="shop-modal">
+    <div class="modalContainer">
+       <img src="/img/cerrar.png" alt="" class="closeModal" id="closeModalCart">
+       <div class="modalContent" id="">
+            aaaaa
+       </div>
+    </div>
+</div>
