--- a/css/product.css
+++ b/css/product.css
@@ -53,6 +53,9 @@
     color: var(--clr-secondary);
     transition: background-color 0.5s, color 0.5s;
 }
+button:hover{
+    cursor: pointer;
+}
 .options button:hover{
     border: 1px solid;
     background-color: transparent;
