--- a/components/header.html
+++ b/components/header.html
@@ -8,15 +8,15 @@
             <li class="link"><a href="#">Nosotros</a></li>
             <li class="link">
                 <img src="/img/carrito-compras.png" alt="" id="shoppingCart">
-                <p class="hiddenOption" id="shoppingQuantity">1</p>
+                <p class="hiddenOption" id="shoppingQuantity">0</p>
             </li>
         </ul>
     </div>
 </nav>
-<div class="shoppingModal hiddenOption" id="shop-modal">
+<div class="shoppingModal displayNoneOption" id="shop-modal">
     <div class="modalContainer">
        <img src="/img/cerrar.png" alt="" class="closeModal" id="closeModalCart">
-       <div class="modalContent" id="">
+       <div class="modalContent" id="modalContent">
             aaaaa
        </div>
     </div>
