--- a/components/product.html
+++ b/components/product.html
@@ -9,12 +9,12 @@
     <div>
         <div class="amount">
             <button class="decrease">-</button>
-            <input type="number" value="1" id="amount" disabled>
+            <input type="number" value="1" id="amount" disabled data-quantity>
             <button class="add">+</button>
         </div>
         <div class="options">
             <!-- <button class="">Detalles</button> -->
-            <button class="">Añadir al carrito</button>
+            <button class="addToCart">Añadir al carrito</button>
         </div>
     </div>
 </div>
