filtro de datos para el carrito de compras

--- a/components/header.html
+++ b/components/header.html
@@ -17,7 +17,8 @@
     <div class="modalContainer">
        <img src="/img/cerrar.png" alt="" class="closeModal" id="closeModalCart">
        <div class="modalContent" id="modalContent">
-            aaaaa
-       </div>
+
+        </div>
+        <button class="buyShopCart">Comprar</button>
     </div>
 </div>
