--- a/css/header.css
+++ b/css/header.css
@@ -103,6 +103,24 @@
 .closeModal:hover{
     cursor: pointer;
 }
+
+.buyShopCart{
+    width: 100%;
+    background-color: var(--clr-alert);
+    border: 1px solid;
+    border-radius: 8px;
+    padding-top: 3px;
+    padding-bottom: 3px;
+    color: var(--clr-secondary);
+    transition: background-color 0.5s, color 0.5s;
+}
+.buyShopCart:hover{
+    cursor: pointer;
+    border: 1px solid;
+    background-color: transparent;
+    color: var(--clr-alert);
+}
+
 .displayNoneOption{
     display: none;
 }
