--- a/css/header.css
+++ b/css/header.css
@@ -86,8 +86,10 @@
 }
 .modalContent{
     display: flex;
-    justify-content: center;
-    align-items: start;
+    flex-direction: column;
+    justify-content: start;
+    align-items: center;
+    padding: 1rem;
     height: 100%;
     width: 100%;
 }
@@ -104,8 +106,8 @@
     cursor: pointer;
 }
 
-.buyShopCart{
-    width: 100%;
+.btn-modal{
+    width: 30%;
     background-color: var(--clr-alert);
     border: 1px solid;
     border-radius: 8px;
@@ -114,11 +116,23 @@
     color: var(--clr-secondary);
     transition: background-color 0.5s, color 0.5s;
 }
-.buyShopCart:hover{
+.btn-modal:hover{
     cursor: pointer;
     border: 1px solid;
     background-color: transparent;
     color: var(--clr-alert);
+}
+
+/* Estilos de los productos en el carrito de compras */
+.productInModal{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    font-size: small;
+}
+.imgProduct{
+    width: 10%;
 }
 
 .displayNoneOption{
