bugfix (reset Quantity after of add to shopping cart)

--- a/components/header.html
+++ b/components/header.html
@@ -17,11 +17,11 @@
     <div class="modalContainer">
         <img src="/img/cerrar.png" alt="" class="closeModal" id="closeModalCart">
         <div class="modalContent" id="modalContent">
-            <div class="productInModal" id="">
+            <div class="productInModal" id="" data-product>
                 <img src="/img/img.png" alt="" class="imgProduct" data-img>
                 <p data-name>Bizcocho de Vainilla</p>
                 <p data-price style='font-weight: bold;'>S/1500</p>
-                <button class="btn-delete btn-modal">Quitar</button>
+                <button class="btn-delete btn-modal" id="btn-delete">Quitar</button>
             </div>
         </div>
         <button class="btn-modal">Comprar</button>
