--- a/components/header.html
+++ b/components/header.html
@@ -5,7 +5,7 @@
             <li class="link"><a href="/index.html">Inicio</a></li>
             <li class="link"><a href="/pages/products.html">Produtos</a></li>
             <!-- <li class="link"><a href="#">Catering</a></li> -->
-            <li class="link"><a href="#">Nosotros</a></li>
+            <!-- <li class="link"><a href="#">Nosotros</a></li> -->
             <li class="link">
                 <img src="/img/carrito-compras.png" alt="" id="shoppingCart">
                 <p class="hiddenOption" id="shoppingQuantity">0</p>
@@ -13,7 +13,7 @@
         </ul>
     </div>
 </nav>
-<div class="shoppingModal displayNoneOption" id="shop-modal">
+<div class="shoppingModal displayNoneOption fade-in" id="shop-modal">
     <div class="modalContainer">
         <img src="/img/cerrar.png" alt="" class="closeModal" id="closeModalCart">
         <div class="modalContent" id="modalContent">
